Basic configuration of Firebase added with example of usages.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddBookActivity"/>
+        <activity android:name=".RemoveBookActivity"/>
+        <activity android:name=".BorrowBookActivity"/>
+        <activity android:name=".ReturnBookActivity"/>
+        <activity android:name=".AboutActivity"/>
     </application>
 
 </manifest>
