--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile "com.google.android.gms:play-services-gcm:11.0.4"
+    compile "com.google.firebase:firebase-auth:11.0.4"
+    compile 'com.google.firebase:firebase-database:11.0.4'
     testCompile 'junit:junit:4.12'
 }
