--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".RemoveBookActivity"/>
         <activity android:name=".BorrowBookActivity"/>
         <activity android:name=".ReturnBookActivity"/>
+        <activity android:name=".RequestBookActivity"/>
+        <activity android:name=".CheckRequestBookActivity"/>
         <activity android:name=".AboutActivity"/>
     </application>
 
