--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile "com.google.firebase:firebase-auth:11.0.4"
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'me.dm7.barcodescanner:zxing:1.9'
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
     testCompile 'junit:junit:4.12'
 }
